syntax = "proto3";

package portableSEAL;
option csharp_namespace = "portableSEAL.Services";

import "id.proto";

message SerializedContext {
    bytes data = 1;
}

message SerializedCiphertext {
    bytes data = 1;
}

message DecryptionResult {
    sint32 NoiseBudget = 1;
    PlaintextData Plaintext = 10;
}

message PlaintextData {
    sint64 data = 1;
}

message KeyPair {
    KeyPairId id = 1;

    bytes PublicKey = 2;
    bytes SecretKey = 3;
}